<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:padding="0dp"
    app:contentInsetEnd="0dp"
    app:contentInsetStart="0dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_small">


        <ImageView
            android:id="@+id/ic_add"
            style="@style/iconToolbar"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_toolbar_plus" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_toolbar_title"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|end"
                android:text="@string/_19_000"
                android:textAppearance="@style/textAppearance.size20.white" />

            <TextView
                android:id="@+id/txt_toolbar_sub_title"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/spacing_small"
                android:gravity="center_vertical|end"
                android:text="@string/toolbar_currency"
                android:textAppearance="@style/textAppearance.size10.white" />
        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_receive"
            style="@style/textButton"
            android:layout_width="@dimen/_50dp"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@drawable/bg_rectangle_trans_bordered_white"
            android:text="@string/toolbar_receive"
            app:backgroundTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_transfer"
            style="@style/textButton"
            android:layout_width="@dimen/_50dp"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@drawable/bg_rectangle_green_bordered_white"
            android:text="@string/toolbar_transfer"
            app:backgroundTint="@null" />

        <ImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:srcCompat="@drawable/img_place_holder_user" />

    </LinearLayout>

</merge>
